# edshat-pipeline

./: README.md  pyproject.toml  setup.py
edshat/: cli.py  config_manager.py  runner.py
edshat/scripts/: combine_ska_compare.py  find_clusters.py  midpoint_root.py  postprocess_snippy.py  ska_compare_to_dist.py
edshat/workflow/: Snakefile  comparative.smk
edshat/workflow/config/: config.yaml  genome_stats.yaml
edshat/workflow/rules/: annotate.smk  assembly.smk  clusters.smk  common.smk  download_db.smk  snps.smk  species.smk
